lay danh sach lop hoc phan ma giang vien duoc phan cong & danh sach sinh vien thuoc lop hoc phan do

--- a/BTTH02/assets/css/style.css
+++ b/BTTH02/assets/css/style.css
@@ -14,6 +14,7 @@ body{
   justify-content: center;
   background: #00C9A7;
 }
+
 ::selection{
   color: #fff;
   background: #00C9A7;
@@ -124,3 +125,36 @@ form input[type="submit"]:hover{
   background: #22E4AC;
 }
 
+
+/* views/instructor/index.php */
+h1 {
+
+  text-align: center;
+  margin-top: 50px;
+}
+
+  /* .content {
+    display: block;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  }
+
+  .content table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+  }
+
+  .content th, td {
+  padding: 10px;
+  border: 1px solid #ccc;
+  }
+
+  .content th {
+  background-color: #f1f1f1;
+  text-align: left;
+  } */
